--- a/app/css/scss/modules.scss
+++ b/app/css/scss/modules.scss
@@ -41,7 +41,7 @@ main {
 
 .nav ul li {
   display: inline;
-  margin-right: 2em;
+  margin-right: 1.5em;
 }
 
 .nav ul li a {
